--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+
+  <body>
+    <script src="scripts/main.js"></script>
+  </body>
+
+</html>
