Regression is executed after "GO" button is pressed.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
 
   <body>
+    <input type="button" value = "GO" onClick="go()">
     <script src="scripts/main.js"></script>
-    
   </body>
 
 </html>
