--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
   </head>
 
   <body>
-    <input type="button" value = "GO" onClick="go()">
+    <div class="regression">
+      <button id="regression_go_btn" type="submit" onclick="regression_go()">Start regression</button>
+    </div>
+    <div class="get_num_players">
+      <button id="get_num_players_btn" type="submit" onclick="get_num_players()">Get num players</button>
+    </div>
+    <div class="save_file">
+      <a href="" download="backup.json" id="save">Download backup.json</a>
+    </div>
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/get_num_players.js"></script>
+
   </body>
-  
+
 </html>
