Added multiple summoner id querying and filtering system

--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
     <div class="get_num_players">
       <button id="get_num_players_btn" type="submit" onclick="get_num_players()">Get num players</button>
     </div>
+    <div class="get_valid_players">
+      <button id="get_valid_players_btn" type="submit" onclick="get_valid_players()">Get valid players</button>
+    </div>
+    <div class="get_valid_player_list">
+      <button id="get_valid_players_btn" type="submit" onclick="get_valid_player_list()">Get valid players</button>
+    </div>
+    <div class="get_active_player_list">
+      <button id="get_active_players_btn" type="submit" onclick="get_active_player_list()">Get active players</button>
+    </div>
     <div class="save_file">
-      <a href="" download="backup.json" id="save">Download backup.json</a>
+      <a download="backup.json" id="save">Download backup.json</a>
+    </div>
+    <div id="console_log">
+      dafuk
     </div>
 
     <script src="scripts/main.js"></script>
     <script src="scripts/get_num_players.js"></script>
+    <script src="scripts/get_valid_players.js"></script>
+    <script src="scripts/get_valid_player_list.js"></script>
+    <script src="scripts/get_active_player_list.js"></script>
 
   </body>
 
