Added console logs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a download="backup.json" id="save">Download backup.json</a>
     </div>
     <div id="console_log">
-      dafuk
+      testing13
     </div>
 
     <script src="scripts/main.js"></script>
