Added build matrix functionality

--- a/index.html
+++ b/index.html
@@ -15,20 +15,25 @@
       <button id="get_valid_players_btn" type="submit" onclick="get_valid_players()">Get valid players</button>
     </div>
     <div class="get_valid_player_list">
-      <button id="get_valid_players_btn" type="submit" onclick="get_valid_player_list()">Get valid players</button>
+      <button id="get_valid_players_btn" type="submit" onclick="get_valid_player_list()">Get valid player list</button>
     </div>
     <div class="get_active_player_list">
-      <button id="get_active_players_btn" type="submit" onclick="get_active_player_list()">Get active players</button>
+      <button id="get_active_players_btn" type="submit" onclick="get_active_player_list()">Get active player list</button>
+    </div>
+    <div>
+      <button id="build" type="submit" onclick="build_matrix()">Build matrix</button>
     </div>
     <div id="console_log">
-      testing13
+      testing14
     </div>
 
-    <script src="scripts/main.js"></script>
+    <script src="scripts/champion_ids.js"></script>
     <script src="scripts/get_num_players.js"></script>
     <script src="scripts/get_valid_players.js"></script>
     <script src="scripts/get_valid_player_list.js"></script>
     <script src="scripts/get_active_player_list.js"></script>
+    <script src="scritps/build_matrix.js"></script>
+    <script src="scripts/main.js"></script>
 
   </body>
 
