--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <button id="build" type="submit" onclick="build_matrix()">Build matrix</button>
     </div>
     <div id="console_log">
-      testing14
+      testing15
     </div>
 
     <script src="scripts/champion_ids.js"></script>
@@ -32,7 +32,7 @@
     <script src="scripts/get_valid_players.js"></script>
     <script src="scripts/get_valid_player_list.js"></script>
     <script src="scripts/get_active_player_list.js"></script>
-    <script src="scritps/build_matrix.js"></script>
+    <script src="scripts/build_matrix.js"></script>
     <script src="scripts/main.js"></script>
 
   </body>
