--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   </head>
 
   <body>
+    <form>
+      Riot API Key: <input size="40" type="text" name="api_key">
+    </form>
     <div class="regression">
       <button id="regression_go_btn" type="submit" onclick="regression_go()">Start regression</button>
     </div>
@@ -23,6 +26,9 @@
     <div>
       <button id="build" type="submit" onclick="build_matrix()">Build matrix</button>
     </div>
+    <div>
+      <button id="test" type="submit" onclick="test_server()">Test server</button>
+    </div>
     <div id="console_log">
       testing18
     </div>
@@ -33,6 +39,7 @@
     <script src="scripts/get_valid_player_list.js"></script>
     <script src="scripts/get_active_player_list.js"></script>
     <script src="scripts/build_matrix.js"></script>
+    <script src="scripts/test_server.js"></script>
     <script src="scripts/main.js"></script>
 
   </body>
